[add] 完成主题色修改，标题样式修改

--- a/SiteServer.Web/SiteServer/Cms/createStatus.cshtml
+++ b/SiteServer.Web/SiteServer/Cms/createStatus.cshtml
@@ -10,25 +10,25 @@
           <h3>剩余页面：</h3>
         </div>
         <div>
-          <span :style="{color: channelsCount? '#fa0' : '#00b19d'}">{{ channelsCount }}</span>
+          <span :style="{color: channelsCount? '#fa0' : 'rgb(49 98 161 / 1)'}">{{ channelsCount }}</span>
           <span>
             <b>栏目页</b>
           </span>
         </div>
         <div>
-          <span :style="{color: contentsCount? '#fa0' : '#00b19d'}">{{ contentsCount }}</span>
+          <span :style="{color: contentsCount? '#fa0' : 'rgb(49 98 161 / 1)'}">{{ contentsCount }}</span>
           <span>
             <b>内容页</b>
           </span>
         </div>
         <div>
-          <span :style=" {color: filesCount? '#fa0' : '#00b19d' }">{{ filesCount }}</span>
+          <span :style=" {color: filesCount? '#fa0' : 'rgb(49 98 161 / 1)' }">{{ filesCount }}</span>
           <span>
             <b>文件页</b>
           </span>
         </div>
         <div>
-          <span :style=" {color: specialsCount? '#fa0' : '#00b19d' }">{{ specialsCount }}</span>
+          <span :style=" {color: specialsCount? '#fa0' : 'rgb(49 98 161 / 1)' }">{{ specialsCount }}</span>
           <span>
             <b>专题页</b>
           </span>
