--- a/SiteServer.Web/SiteServer/assets/css/menu.css
+++ b/SiteServer.Web/SiteServer/assets/css/menu.css
@@ -116,13 +116,13 @@ File: Topbar,Left-sidebar,Right-sidebar
 }
 
 .noti-primary {
-  color: #00b19d;
-  border: 2px solid #00b19d;
+  color: rgb(49 98 161 / 1);
+  border: 2px solid rgb(49 98 161 / 1);
 }
 
 .noti-success {
-  color: #00b19d;
-  border: 2px solid #00b19d;
+  color: rgb(49 98 161 / 1);
+  border: 2px solid rgb(49 98 161 / 1);
 }
 
 .noti-info {
@@ -344,7 +344,7 @@ body.fixed-left .side-menu.left {
 
 #sidebar-menu ul ul li.active a {
   background: #ddd;
-  color: #00b19d;
+  color: rgb(49 98 161 / 1);
 }
 
 #sidebar-menu ul ul a {
@@ -354,7 +354,7 @@ body.fixed-left .side-menu.left {
 }
 
 #sidebar-menu ul ul a:hover {
-  color: #00b19d;
+  color: rgb(49 98 161 / 1);
 }
 
 #sidebar-menu ul ul a i {
@@ -375,11 +375,11 @@ body.fixed-left .side-menu.left {
 
 #sidebar-menu>ul>li>a:hover {
   background: #f5f5f5;
-  border-left: 2px solid #00b19d !important;
+  border-left: 2px solid rgb(49 98 161 / 1) !important;
 }
 
 #sidebar-menu>ul>li>a:hover i {
-  color: #00b19d !important;
+  color: rgb(49 98 161 / 1) !important;
 }
 
 #sidebar-menu>ul>li>a:hover span {
@@ -409,11 +409,11 @@ body.fixed-left .side-menu.left {
 
 #sidebar-menu>ul>li>a.active {
   background: #f5f5f5;
-  border-left: 2px solid #00b19d !important;
+  border-left: 2px solid rgb(49 98 161 / 1) !important;
 }
 
 #sidebar-menu>ul>li>a.active i {
-  color: #00b19d !important;
+  color: rgb(49 98 161 / 1) !important;
 }
 
 #sidebar-menu>ul>li>a.active span {
@@ -431,24 +431,24 @@ body.fixed-left .side-menu.left {
 
 #sidebar-menu>ul>li>a.active.subdrop {
   background: #f5f5f5 !important;
-  border-left: 2px solid #00b19d;
+  border-left: 2px solid rgb(49 98 161 / 1);
 }
 
 #sidebar-menu>ul>li>a.active.subdrop i {
-  color: #00b19d;
+  color: rgb(49 98 161 / 1);
 }
 
 .subdrop {
   background: #f5f5f5;
-  border-left: 2px solid #00b19d !important;
+  border-left: 2px solid rgb(49 98 161 / 1) !important;
 }
 
 .subdrop i {
-  color: #00b19d !important;
+  color: rgb(49 98 161 / 1) !important;
 }
 
 .subdrop span {
-  color: #00b19d !important;
+  color: rgb(49 98 161 / 1) !important;
 }
 
 #wrapper.enlarged .menu-title,
@@ -553,12 +553,12 @@ body.fixed-left .side-menu.left {
   position: relative;
   width: 260px;
   background: #f5f5f5;
-  color: #00b19d;
-  border-color: #00b19d;
+  color: rgb(49 98 161 / 1);
+  border-color: rgb(49 98 161 / 1);
 }
 
 #wrapper.enlarged .left.side-menu #sidebar-menu ul>li:hover>a i {
-  color: #00b19d;
+  color: rgb(49 98 161 / 1);
 }
 
 #wrapper.enlarged .content-page {
@@ -613,7 +613,7 @@ body.fixed-left .side-menu.left {
 }
 
 #wrapper.enlarged #sidebar-menu ul ul li.active a {
-  color: #00b19d;
+  color: rgb(49 98 161 / 1);
 }
 
 #wrapper.enlarged .footer {
@@ -713,12 +713,12 @@ body.fixed-left .side-menu.left {
 }
 
 #topnav .has-submenu.active .submenu li.active a {
-  color: #00b19d;
+  color: rgb(49 98 161 / 1);
 }
 
 #topnav .topbar-main {
   font-family: 'Microsoft YaHei', sans-serif;
-  background-color: #00b19d;
+  background-color: rgb(49 98 161 / 1);
   height: 62px;
 }
 
@@ -929,8 +929,8 @@ body.fixed-left .side-menu.left {
 }
 
 #topnav .noti-primary {
-  color: #00b19d;
-  border: 2px solid #00b19d;
+  color: rgb(49 98 161 / 1);
+  border: 2px solid rgb(49 98 161 / 1);
 }
 
 #topnav .noti-success {
@@ -996,7 +996,7 @@ body.fixed-left .side-menu.left {
 }
 
 #topnav .navbar-toggle:focus span {
-  background-color: #00b19d;
+  background-color: rgb(49 98 161 / 1);
 }
 
 #topnav .navbar-toggle .lines {
@@ -1043,7 +1043,7 @@ body.fixed-left .side-menu.left {
   list-style: none;
   margin: 0;
   padding: 0;
-  margin-left: 210px;
+  margin-left: 10px;
 }
 
 #topnav .navigation-menu>li {
@@ -1203,7 +1203,7 @@ body.fixed-left .side-menu.left {
   }
 
   #topnav .navigation-menu>li .submenu li a:hover {
-    color: #00b19d;
+    color: rgb(49 98 161 / 1);
   }
 
   #topnav .navigation-menu>li .submenu li span {
@@ -1277,7 +1277,7 @@ body.fixed-left .side-menu.left {
   }
 
   #topnav .navigation-menu>li .submenu li a:hover {
-    color: #00b19d;
+    color: rgb(49 98 161 / 1);
   }
 
   #topnav .navigation-menu>li .submenu li.has-submenu>a:after {
@@ -1316,7 +1316,7 @@ body.fixed-left .side-menu.left {
   }
 
   #topnav .navigation-menu>li.has-submenu.open>a {
-    color: #00b19d;
+    color: rgb(49 98 161 / 1);
   }
 
   #topnav .navbar-header {
