--- a/SiteServer.Web/SiteServer/pageLogin.cshtml
+++ b/SiteServer.Web/SiteServer/pageLogin.cshtml
@@ -12,7 +12,7 @@
 <div class="wrapper-page">
   <div class="card-box">
 
-    <h4 class="m-l-5">管理员登录</h4>
+    <p style="color:rgb(49 98 161);font-size:18px;font-family:FZYaSongS-B-GB,font-weight:800" class="m-l-5">欢迎进入浙江消防政工网投稿系统</p>
 
     <form v-on:submit="btnLoginClick" class="form-horizontal m-t-20">
 
